Implemented Player "bust" functionality and logic for Aces

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <script src="lib/underscore.js"></script>
     <script src="lib/backbone.js"></script>
 
-    <script src="compiled/client/models/Card.js"></script>
-    <script src="compiled/client/collections/Hand.js"></script>
-    <script src="compiled/client/collections/Deck.js"></script>
-    <script src="compiled/client/models/App.js"></script>
+    <script src="client/compiled/models/Card.js"></script>
+    <script src="client/compiled/collections/Hand.js"></script>
+    <script src="client/compiled/collections/Deck.js"></script>
+    <script src="client/compiled/models/App.js"></script>
 
-    <script src="compiled/client/views/CardView.js"></script>
-    <script src="compiled/client/views/HandView.js"></script>
-    <script src="compiled/client/views/AppView.js"></script>
+    <script src="client/compiled/views/CardView.js"></script>
+    <script src="client/compiled/views/HandView.js"></script>
+    <script src="client/compiled/views/AppView.js"></script>
 
-    <script src="compiled/client/main.js"></script>
+    <script src="client/compiled/main.js"></script>
   </body>
 </html>
