Added Dealer Logic, now to optimize events and add additional features listed in readme

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="lib/jquery.js"></script>
     <script src="lib/underscore.js"></script>
     <script src="lib/backbone.js"></script>
+    <script src="bower_components/mustache/mustache.js"></script>
 
     <script src="client/compiled/models/Card.js"></script>
     <script src="client/compiled/collections/Hand.js"></script>
